--- a/src/components/auth/login/Login.module.css
+++ b/src/components/auth/login/Login.module.css
@@ -16,6 +16,14 @@
     margin-bottom: 20px;
 }
 
+.Logo img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 50%;
+}
+
 .select {
     margin: 20px 0 30px 0;
 }
@@ -34,4 +42,9 @@
 
 .messageInvalid {
     color: red;
+}
+
+.buttons {
+    display: flex;
+    gap: 25px;
 }
